<resources>
    <string name="app_name">TravelApp</string>
    <string name="username">Traveller</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text1">Travel App</string>
    <string name="title_activity_maps">Route Planning</string>

    <string name="title_section1">Profile</string>
    <string name="title_section2">Attraction List</string>
    <string name="title_section3">Attraction Locator</string>
    <string name="title_section4">Daily Itinerary</string>
    <string name="title_section5">Travel Journal</string>
    <string name="title_section6">Postcard</string>
    <string name="title_section7">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menuicon">menuicon</string>
    <string name="title_activity_route_planning">Route Plan</string>
    <string name="search_button">Search</string>
    <string name="search_box_hint">Enter a location</string>
    <string name="route">Route</string>
    <string name="add">Add</string>
    <string name="change_view">Change View</string>
    <string name="itinerary">Itinerary</string>
    <string name="enter_budget">Enter budget</string>
    <string name="budget">Budget</string>
    <string name="enter_attraction">Enter an attraction</string>
    <string name="generate_itinerary">Generate itinerary</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Confirm deletion?</string>

    <string name="facebook_app_id">1013057358737977</string>

</resources>
