<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:background="@drawable/mbsg"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColor="@color/text1"
        android:id="@+id/budgetamt"
        android:hint="@string/enter_budget"
        android:textSize="20dp"
        android:layout_marginTop="77dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/attraction" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:id="@+id/budget"
        android:textSize="25dp"
        android:textColor="#030303"
        android:layout_above="@+id/attraction"
        android:layout_alignStart="@+id/attraction" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/attraction"
        android:textColor="@color/text1"
        android:hint="@string/enter_attraction"
        android:textSize="20dp"
        android:layout_below="@+id/budgetamt"
        android:layout_alignEnd="@+id/generateIt"
        android:layout_alignStart="@+id/add" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:textSize="15dp"
        android:background="@color/text1"
        android:layout_marginEnd="14dp"
        android:layout_below="@+id/attraction"
        android:layout_toStartOf="@+id/clearbtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_itinerary"
        android:id="@+id/generateIt"
        android:background="@color/text1"
        android:textSize="15dp"
        android:layout_marginEnd="27dp"
        android:layout_alignTop="@+id/clearbtn"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear All"
        android:id="@+id/clearbtn"
        android:background="@color/text1"
        android:textSize="15dp"
        android:layout_alignTop="@+id/add"
        android:layout_toStartOf="@+id/generateIt"
        android:layout_marginEnd="13dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/attractionList"
        android:textColor="@color/text1"
        android:layout_below="@+id/generateIt"
        android:layout_marginTop="34dp"
        android:layout_alignStart="@+id/add"
        android:layout_alignEnd="@+id/generateIt"
        android:choiceMode="singleChoice" />


</RelativeLayout>